2002-12-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaObj.c (FreeTclObject, SetJavaCmdFromAny):
	Convert both a tclObjectType and a cmdTypePtr that
	holds a TclObject into a command internal rep
	with the same method. The previous implementation
	incremented the ref count and created a new JNI
	global ref for no apparent reason. Set the TclObject
	pointer to NULL in FreeTclObject, this has no effect
	but makes the code more clear.

2002-12-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Mention tclblend_init change.
	* src/native/javaCmd.c (JavaInitEnv): Treat
	tclblend_init as a list and pass each element
	as a JVM option.
	* tests/tclblend/loading.test: Test passing
	of multiple JVM options via tclblend_init.

2002-12-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Add note about new accessible
	field, method, and constructor implementation.
	* src/tcljava/tcl/lang/FieldSig.java (get,
	getAccessibleFields, getAccessibleField):
	Implement new access approach for fields. Use
	a new error message to indicate that a field
	can't be access, not that is does not exist.
	* src/tcljava/tcl/lang/FuncSig.java (get,
	lookupMethod, matchSignature,
	getAccessibleConstructors, getAccessibleConstructor,
	getAllDeclaredMethods, getAccessibleMethods):
	Implement new access approach for methods
	and constructors. Use a new error message to
	indicate that a method or constructor can't
	be accessed, not the it does not exist.
	* src/tcljava/tcl/lang/JavaInfoCmd.java
	(getFieldInfoList): Invoke FieldSig.getAccessibleFields()
	instead of calling Class.getFields() directly so that
	package access fields are returned when accessible.
	* src/tcljava/tcl/lang/reflect/PkgInvoker.java
	(usesDefaultInvoker): Add new helper method that
	will return true when a given class does not have
	a custom package invoker.
	* src/tests/tcljava/tests/invoke/PublicTester.java:
	Update comments.