@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: JavaDefineClassCmd.test,v 1.3 1999/05/16 00:13:55 dejong Exp $
+# RCS: @(#) $Id: JavaDefineClassCmd.test,v 1.4 2000/12/22 09:47:15 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -28,7 +28,7 @@ if { $tcl_platform(platform) == "java" } {
 set platform [testgetplatform]
 
 if {[info exists env(BUILD_DIR)]} {
-    set root_path [file join $env(BUILD_DIR) tests]
+    set root_path [file join $env(BUILD_DIR) btests]
 } elseif {$platform == "windows"} {
     set root_path [file join .. win tests]
 } else {
